add: defend buttons & hp bar on each unit bar

--- a/src/components/PlayerContainer/PlayerContainer.scss
+++ b/src/components/PlayerContainer/PlayerContainer.scss
@@ -1,5 +1,6 @@
 .player__container {
     display: flex;
+    flex-direction: column;
     width: 20%;
     height: 100vh;
     justify-content: center;
