--- a/src/components/UnitBlock/UnitBlock.scss
+++ b/src/components/UnitBlock/UnitBlock.scss
@@ -4,7 +4,7 @@
     height: 150px;
     margin: 20px;
     border: 1px solid black;
-
+    flex-wrap: wrap;
 };
 
 .unit__info {
@@ -14,16 +14,16 @@
 }
 
 .unit__logo {
-    width: 50%;
+    width: 30%;
     height: 100%;
     & img {
         width: 100%;
-        height: 100%;
+        height: 80%;
     }
 }
 
 .unit__stats {
-    width: 50%;
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -33,4 +33,12 @@
         padding: 0;
         margin: 0;
     }
+}
+
+.unit__hp {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
