--- a/src/components/PlayerContainer/PlayerContainer.scss
+++ b/src/components/PlayerContainer/PlayerContainer.scss
@@ -1,8 +1,14 @@
 .player__container {
     display: flex;
     flex-direction: column;
+    height: 100%;
     width: 20%;
-    height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: rgb(177, 169, 149);
+}
+
+.btn__wrapper {
+    width: 50%;
+    padding: 10px;
 }
