--- a/src/components/UnitBlock/UnitBlock.scss
+++ b/src/components/UnitBlock/UnitBlock.scss
@@ -2,9 +2,11 @@
     display: flex;
     width: 25%;
     height: 150px;
-    margin: 20px;
+    margin: 15px;
     border: 1px solid black;
     flex-wrap: wrap;
+    border-radius: 5px;
+    background-color: rgb(161, 161, 243);
 };
 
 .unit__info {
@@ -14,31 +16,32 @@
 }
 
 .unit__logo {
-    width: 30%;
+    display: flex;
+    width: 1000%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
     & img {
-        width: 100%;
+        width: 40%;
         height: 80%;
     }
 }
 
-.unit__stats {
-    width: 70%;
-    height: 100%;
+.unit__type {
+    width: 100%;
     display: flex;
     justify-content: center;
-    & ul {
-        height: 100%;
-        list-style: none;
-        padding: 0;
+    & h4 {
         margin: 0;
     }
 }
 
 .unit__hp {
     width: 100%;
-    height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    & h4 {
+        margin: 0
+    }
 }
