--- a/src/components/UnitsContainer/UnitsContainer.scss
+++ b/src/components/UnitsContainer/UnitsContainer.scss
@@ -3,5 +3,5 @@
     flex-wrap: wrap;
     justify-content: space-around;
     width: 60%;
-    background-color: rgb(197, 196, 196);
+    height: 100%;
 }
