add: ui init with random units on board

--- a/src/components/PlayerContainer/PlayerContainer.scss
+++ b/src/components/PlayerContainer/PlayerContainer.scss
@@ -11,6 +11,19 @@
 .btn__wrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 50%;
     padding: 10px;
+    height: 10%;
+    & button {
+        height: 50%;
+    };
 }
+
+.order__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+};
