--- a/src/components/UnitBlock/UnitBlock.scss
+++ b/src/components/UnitBlock/UnitBlock.scss
@@ -6,8 +6,8 @@
     border: 1px solid black;
     flex-wrap: wrap;
     border-radius: 5px;
-    background-color: rgb(161, 161, 243);
     cursor: pointer;
+    background-color: rgb(203, 228, 92);
 };
 
 .unit__info {
@@ -15,6 +15,10 @@
     width: 100%;
     height: 50%;
 }
+
+.unit__index {
+    font-size: 24px;
+};
 
 .unit__logo {
     display: flex;
