--- a/src/components/UnitsContainer/UnitsContainer.scss
+++ b/src/components/UnitsContainer/UnitsContainer.scss
@@ -1,7 +1,7 @@
 .units__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 60%;
+    justify-content: flex-end;
+    width: 70%;
     height: 100%;
 }
